# zrive-ds

./: pyproject.toml
src/module_1/: module_1_meteo_api.py
src/module_2/: part1.ipynb  part1.md  part2.ipynb  part2.md
src/module_3/: exploration.ipynb  functions.py  milestone1.ipynb  milestone1.md  predict.py  train.py
src/module_3/models/: 20241104194930_logistic_regression.pkl
src/module_4/: exploration.ipynb  exploration.md  predict.py  train.py
src/module_5/: module5.ipynb  module5.md
